fixed major backend codes added frontend cors